<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureActivity">

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="313dp"
        android:text="@string/app_buttonSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tachycardia"
        app:layout_constraintTop_toBottomOf="@+id/tachycardia" />

    <EditText
        android:id="@+id/pressureBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/app_textBottomPressure"
        app:layout_constraintBottom_toTopOf="@+id/pulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureTop" />

    <EditText
        android:id="@+id/pulse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/app_textPulse"
        app:layout_constraintBottom_toTopOf="@+id/tachycardia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureBottom" />

    <CheckBox
        android:id="@+id/tachycardia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="31dp"
        android:text="@string/app_checkTachycardia"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="@+id/pulse"
        app:layout_constraintTop_toBottomOf="@+id/pulse" />

    <EditText
        android:id="@+id/pressureTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/app_textTopPressure"
        app:layout_constraintBottom_toTopOf="@+id/pressureBottom"
        app:layout_constraintEnd_toEndOf="@+id/pressureBottom"
        app:layout_constraintStart_toStartOf="@+id/pulse"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>